update yaml; hello world!

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,6 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+- script: echo Hello, world!
+  displayName: "print a message"
