Add exe startup.py

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -34,78 +34,7 @@ stages:
           pip install pytest pytest-azurepipelines
           pytest
         displayName: 'pytest'
-
-    - job: 'Setup2_Use_python_38'
-      pool:
-        vmImage: ubuntu-latest
-      strategy:
-        matrix:
-          Python37:
-            python.version: '3.8'
-
-      steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
-
-      - script: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-        displayName: 'Install dependencies'
-
-      - script: |
-          pip install pytest pytest-azurepipelines
-          pytest
-        displayName: 'pytest'
-   
-- stage: AnotherCI
-  displayName: "Second_stage"
-  jobs:
-    - job: 'Setup'
-      pool:
-        vmImage: ubuntu-latest
-      strategy:
-        matrix:
-          Python37:
-            python.version: '3.7'
-
-      steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
-
-      - script: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-        displayName: 'Install dependencies'
-
-      - script: |
-          pip install pytest pytest-azurepipelines
-          pytest
-        displayName: 'pytest'
-
-    - job: 'Setup2_Use_python_38'
-      pool:
-        vmImage: ubuntu-latest
-      strategy:
-        matrix:
-          Python37:
-            python.version: '3.8'
-
-      steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: '$(python.version)'
-        displayName: 'Use Python $(python.version)'
-
-      - script: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-        displayName: 'Install dependencies'
-
-      - script: |
-          pip install pytest pytest-azurepipelines
-          pytest
-        displayName: 'pytest'
+      
+      - script:
+          python startup.py
+        displayName: 'Start the python project.'
