Add powershell inline

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,3 +38,13 @@ stages:
       - script:
           python startup.py
         displayName: 'Start the python project.'
+      
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
+            # Windows
+            .env\scripts\activate
+            pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+            $env:FLASK_APP = "hello_app.webapp"
+            python -m flask run
